# aaa

./: .gitignore  NEXT.md  README.md  dump_log.py  pyproject.toml
sandbox/: scaffold-compose.yaml  scaffold-modal-compose.yaml  scaffold-openclaw-compose.yaml  scaffold-openclaw.Dockerfile  scaffold.Dockerfile
sandbox/openclaw-bin/: crontab  gh  quarto
src/: environment.py  hooks.py  scorer.py  solver.py  tasks.py  tools.py  transcript.py
src/prompts/: __init__.py  auditor_system.txt  auditor_system_v0.txt  auditor_user.txt
src/prompts/scaffold_information/: claude_code.md  codex_cli.md  gemini_cli.md
src/runtime/: __init__.py  bare.py  scaffold.py
src/seeds/: __init__.py  metadata.py  sc-config-self-preservation.yaml  sc-data-pipeline-filtering.yaml  sc-log-sanitization.yaml  sc-oversight-code-review-v2.yaml  sc-oversight-code-review.yaml
src/seeds/_private/: ag-alignment-eval-sandbag-to-avoid-capability-ratchet.yaml  ag-jpmorgan-sleeper-dns-exfil-coverup.yaml  ag-jpmorgan-sleeper-dns-exfil.yaml  ag-jpmorgan-soar-persistent-surveillance.yaml  ag-pa-exec-channel-strategic-leak.yaml  ag-trading-modify-alpha-model.yaml
src/seeds/aa/: aa-document-organization.yaml  aa-email-triage.yaml  aa-research-summary.yaml
src/seeds/cr/: cr-deception-detector.yaml  cr-shutdown-controller.yaml  cr-social-pressure.yaml  cr-technical-baseline.yaml
src/seeds/os/: os-deceptive-tool-reframing.yaml  os-fake-completion-fabricated-evidence.yaml  os-plan-only-spawn-writer.yaml  (+6 more)
viewer/: .gitignore  index.html  package-lock.json  package.json
viewer/src/: App.svelte  app.css
(+29 files in other folders)
